--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+
+
+      <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
